Fixed nav button on mobile

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -49,7 +49,7 @@
 
   @include media-query($on-palm) {
     position: absolute;
-    top: 9px;
+    top: $spacing-unit * 0.5;
     right: $spacing-unit * 0.5;
     background-image: linear-gradient(to right, #FFDE59, #FF914D);
     border: 1px solid $grey-color-light;
